Pipeline/org_omg_PortableServer/org_omg_PortableServerOutputResult.txt
Sample: RequestProcessingPolicyValue_3
----------------------------------------------------------------
output:
./org_omg_PortableServer/javaFiles/RequestProcessingPolicyValue_3.java:3: error: class MyRequestProcessingPolicyValue is public, should be declared in a file named MyRequestProcessingPolicyValue.java
public class MyRequestProcessingPolicyValue implements RequestProcessingPolicyValue {
       ^
./org_omg_PortableServer/javaFiles/RequestProcessingPolicyValue_3.java:1: error: package org.omg.PortableServer does not exist
import org.omg.PortableServer.RequestProcessingPolicyValue;
                             ^
./org_omg_PortableServer/javaFiles/RequestProcessingPolicyValue_3.java:3: error: cannot find symbol
public class MyRequestProcessingPolicyValue implements RequestProcessingPolicyValue {
                                                       ^
  symbol: class RequestProcessingPolicyValue
./org_omg_PortableServer/javaFiles/RequestProcessingPolicyValue_3.java:10: error: method does not override or implement a method from a supertype
    @Override
    ^
4 errors


================================================================

